# cosmic-paste

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
cosmic-paste-applet/: Cargo.toml
cosmic-paste-applet/src/: app.rs  dbus_sub.rs  icons.rs  main.rs
cosmic-paste-cli/: Cargo.toml
cosmic-paste-cli/src/: main.rs
cosmic-paste-core/: Cargo.toml
cosmic-paste-core/src/: active_index.rs  error.rs  history.rs  item.rs  lib.rs  persistence.rs  selection_status.rs  settings.rs  show_history_trigger.rs
cosmic-paste-core/src/dbus/: applet_activation.rs  client.rs  clipboard.rs  guard.rs  lifecycle.rs  mod.rs  service.rs  state.rs
cosmic-paste-daemon/: Cargo.toml
cosmic-paste-daemon/src/: config.rs  ingest.rs  lifecycle.rs  main.rs  signals.rs
cosmic-paste-daemon/src/monitor/: data_control.rs  guard.rs  mod.rs
cosmic-paste-daemon/src/shortcuts/: mod.rs  portal_spike.rs
cosmic-paste-daemon/tests/: portal_shortcut_fire.rs
cosmic-paste-ui/: Cargo.toml
cosmic-paste-ui/src/: main.rs
data/: com.system76.CosmicPaste.Applet.desktop  state-paths.md
data/com.system76.CosmicPaste/v1/: settings.schema
data/dbus/: com.system76.CosmicPaste.Applet.service  org.system76.CosmicPaste.service  org.system76.CosmicPaste.xml
data/examples/: cosmic-custom-shortcuts.ron
data/systemd/: com.system76.CosmicPaste.service
docs/: DESIGN.md  STATE.md
docs/adr/: 001-clipboard-monitor.md
packaging/homebrew/: cosmic-paste.rb
scripts/: build-release-bundle.sh  cosmic-paste-show-history  install-release.sh  install-remote.sh  install.sh
scripts/lib/: install-common.sh
