[workspace]
resolver = "2"
members = [
    "cosmic-paste-core",
    "cosmic-paste-daemon",
    "cosmic-paste-applet",
    "cosmic-paste-ui",
    "cosmic-paste-cli",
]

[workspace.package]
edition = "2024"
license = "BSD-2-Clause"
rust-version = "1.90"
authors = ["Erik Balfe"]

[workspace.dependencies]
cosmic-paste-core = { path = "cosmic-paste-core" }
dirs = "6"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
zbus = { version = "5.13", default-features = false, features = ["tokio"] }