[package]
name = "cosmic-paste-applet"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "cosmic-paste panel applet"
publish = false

[[bin]]
name = "cosmic-paste-applet"
path = "src/main.rs"

[dependencies]
cosmic-paste-core = { workspace = true }
futures-util = { workspace = true }
notify = "8"
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "applet-token",
] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
zbus = { workspace = true }