[package]
name = "cosmic-paste-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "cosmic-paste command-line client (stub — PR 10)"
publish = false

[[bin]]
name = "cosmic-paste"
path = "src/main.rs"

[dependencies]
cosmic-paste-core = { workspace = true }