[package]
name = "cosmic-paste-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "cosmic-paste background daemon (DBus + clipboard monitor)"
publish = false

[[bin]]
name = "cosmic-paste-daemon"
path = "src/main.rs"

[dependencies]
cosmic-paste-core = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols-wlr = { workspace = true }
zbus = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }