[package]
name = "cosmic-paste-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "cosmic-paste full history window (stub — PR 7b/11)"
publish = false

[[bin]]
name = "cosmic-paste-ui"
path = "src/main.rs"

[dependencies]
cosmic-paste-core = { workspace = true }